k8s/iai-prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iai-prod
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: prod
